--- a/assets/css/hero-devices.css
+++ b/assets/css/hero-devices.css
@@ -12,7 +12,7 @@
     font-size: 1.5rem;
     margin-bottom: 2rem;
 }
-.hero.avatar{
+.hero-avatar{
     display: block;
     width: 12rem;
     height: auto;
